apps/adguard/adguard/adguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
spec:
  ingressClassName: nginx
  rules:
  - host: adguard.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-http
              port:
                name: http
